--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-dtoverlay=spi0-cs,cs0_pin=27,cs1_pin=28
+Fork for arm64 build.  This fork will be deleted once Widgetlords offers arm64 support in the primary library.
